--- a/2.html
+++ b/2.html
@@ -8,39 +8,72 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
+            margin: 15px;
+            background-color: #e8f4f8;
+            font-size: 16px;
+            background-image: linear-gradient(45deg, #e8f4f8 25%, transparent 25%), 
+                              linear-gradient(-45deg, #e8f4f8 25%, transparent 25%), 
+                              linear-gradient(45deg, transparent 75%, #e8f4f8 75%), 
+                              linear-gradient(-45deg, transparent 75%, #e8f4f8 75%);
+            background-size: 20px 20px;
         }
         .container {
-            max-width: 600px;
+            max-width: 1200px;
             margin: 0 auto;
             background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 35px;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
+            border: 3px solid #4CAF50;
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #2e7d32;
+            margin-bottom: 25px;
+            font-size: 32px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+            border-bottom: 3px solid #4CAF50;
+            padding-bottom: 15px;
         }
         fieldset {
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 5px;
+            border: 2px solid #81c784;
+            padding: 25px;
+            margin-bottom: 25px;
+            border-radius: 10px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            background-color: #f9f9f9;
         }
         legend {
             font-weight: bold;
-            color: #555;
-            padding: 0 10px;
+            color: #2e7d32;
+            padding: 5px 15px;
+            font-size: 18px;
+            background-color: #c8e6c9;
+            border-radius: 8px;
+            border: 1px solid #4CAF50;
         }
         .form-group {
+            flex: 1;
+            min-width: 280px;
             margin-bottom: 15px;
+        }
+        .form-group.full-width {
+            flex: 1 1 100%;
+        }
+        .form-group.half-width {
+            flex: 1 1 45%;
+        }
+        .form-group.third-width {
+            flex: 1 1 30%;
         }
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             font-weight: bold;
+            font-size: 15px;
+            color: #333;
         }
         input[type="text"],
         input[type="password"],
@@ -52,37 +85,87 @@
         input[type="search"],
         select,
         textarea {
-            width: calc(100% - 22px); /* Adjust for padding and border */
+            width: 100%;
+            padding: 12px;
+            border: 2px solid #ccc;
+            border-radius: 8px;
+            box-sizing: border-box;
+            font-size: 15px;
+            transition: border-color 0.3s;
+        }
+        input:hover, select:hover, textarea:hover {
+            border-color: #81c784;
+        }
+        textarea {
+            height: 80px;
+            resize: vertical;
+        }
+        .radio-group, .checkbox-group {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
             padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box; /* Include padding and border in the element's total width and height */
+            background-color: #e8f5e8;
+            border-radius: 8px;
+            border: 1px solid #c8e6c9;
+        }
+        .radio-group label, .checkbox-group label {
+            display: flex;
+            align-items: center;
+            font-weight: normal;
+            margin-bottom: 0;
+            white-space: nowrap;
+            padding: 5px 10px;
+            background-color: white;
+            border-radius: 5px;
+            border: 1px solid #ddd;
         }
         input[type="radio"],
         input[type="checkbox"] {
-            margin-right: 5px;
+            margin-right: 8px;
+            margin-left: 0;
+            transform: scale(1.2);
+        }
+        .submit-group {
+            text-align: center;
+            margin-top: 30px;
+            padding: 20px;
+            background-color: #f5f5f5;
+            border-radius: 10px;
+            border: 2px dashed #4CAF50;
         }
         input[type="submit"],
         input[type="reset"] {
             background-color: #4CAF50;
             color: white;
-            padding: 12px 20px;
+            padding: 15px 30px;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
-            margin-right: 10px;
+            margin: 0 10px;
+            font-weight: bold;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+            transition: all 0.3s;
+        }
+        input[type="submit"]:hover {
+            background-color: #45a049;
+            transform: translateY(-2px);
         }
         input[type="reset"] {
             background-color: #f44336;
         }
+        input[type="reset"]:hover {
+            background-color: #da190b;
+            transform: translateY(-2px);
+        }
         input:focus:invalid {
-            border: 1px solid #F5192F;
-            box-shadow: 0 0 4px #F5192F;
+            border: 2px solid #F5192F;
+            box-shadow: 0 0 8px #F5192F;
         }
         input:focus:valid {
-            border: 1px solid #64C364;
-            box-shadow: 0 0 4px #64C364;
+            border: 2px solid #64C364;
+            box-shadow: 0 0 8px #64C364;
         }
     </style>
 </head>
@@ -94,71 +177,52 @@
         <form action="/submit-feedback" method="post">
             <fieldset>
                 <legend>Participant Information</legend>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="fullName">Full Name:</label>
                     <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" required minlength="3" maxlength="50" autofocus>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" placeholder="e.g., your@example.com" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="organization">Organization/Company:</label>
                     <input type="text" id="organization" name="organization" placeholder="Enter your organization" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="jobTitle">Job Title/Role:</label>
                     <input type="text" id="jobTitle" name="jobTitle" placeholder="e.g., Software Developer, Manager" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="workshopDate">Workshop Date Attended:</label>
                     <input type="date" id="workshopDate" name="workshopDate" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="phone">Phone Number:</label>
                     <input type="tel" id="phone" name="phone" placeholder="e.g., 123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Format: 123-456-7890">
                 </div>
-                <div class="form-group">
+                <div class="form-group full-width">
                     <label>How did you hear about this workshop?</label>
-                    <input type="radio" id="social" name="hearAbout" value="social" required>
-                    <label for="social">Social Media</label>
-                    <input type="radio" id="colleague" name="hearAbout" value="colleague">
-                    <label for="colleague">Colleague/Friend</label>
-                    <input type="radio" id="website" name="hearAbout" value="website">
-                    <label for="website">Company Website</label>
-                    <input type="radio" id="other" name="hearAbout" value="other">
-                    <label for="other">Other</label>
+                    <div class="radio-group">
+                        <label><input type="radio" id="social" name="hearAbout" value="social" required>Social Media</label>
+                        <label><input type="radio" id="colleague" name="hearAbout" value="colleague">Colleague/Friend</label>
+                        <label><input type="radio" id="website" name="hearAbout" value="website">Company Website</label>
+                        <label><input type="radio" id="other" name="hearAbout" value="other">Other</label>
+                    </div>
                 </div>
             </fieldset>
 
             <fieldset>
                 <legend>Workshop Feedback & Evaluation</legend>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="overallRating">Overall Workshop Rating (1-10):</label>
                     <input type="number" id="overallRating" name="overallRating" min="1" max="10" value="5" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="instructorWebsite">Instructor's Website/LinkedIn:</label>
                     <input type="url" id="instructorWebsite" name="instructorWebsite" placeholder="e.g., https://linkedin.com/in/instructor" pattern="https?://.+" title="Please enter a valid URL (http or https)">
                 </div>
-                <div class="form-group">
-                    <label>Which aspects were most valuable?</label>
-                    <input type="checkbox" id="content" name="valuable_content" value="content">
-                    <label for="content">Content Quality</label>
-                    <input type="checkbox" id="presentation" name="valuable_presentation" value="presentation">
-                    <label for="presentation">Presentation Style</label>
-                    <input type="checkbox" id="materials" name="valuable_materials" value="materials">
-                    <label for="materials">Course Materials</label>
-                    <input type="checkbox" id="interaction" name="valuable_interaction" value="interaction">
-                    <label for="interaction">Interaction/Q&A</label>
-                    <input type="checkbox" id="networking" name="valuable_networking" value="networking">
-                    <label for="networking">Networking Opportunities</label>
-                </div>
-                <div class="form-group">
-                    <label for="feedback">Additional Comments & Suggestions:</label>
-                    <textarea id="feedback" name="feedback" rows="5" placeholder="Please share your detailed feedback, suggestions for improvement, or any other comments" required></textarea>
-                </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="workshopType">Workshop Category:</label>
                     <select id="workshopType" name="workshopType" required>
                         <option value="">-- Select workshop type --</option>
@@ -169,17 +233,31 @@
                         <option value="personal">Personal Development</option>
                     </select>
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="certificate">Upload Workshop Certificate (if received):</label>
                     <input type="file" id="certificate" name="certificate" accept="image/*,.pdf">
                 </div>
-                <div class="form-group">
+                <div class="form-group third-width">
                     <label for="searchQuery">Search for Future Workshops:</label>
                     <input type="search" id="searchQuery" name="searchQuery" placeholder="Search upcoming workshops...">
                 </div>
+                <div class="form-group third-width">
+                    <label for="feedback">Additional Comments & Suggestions:</label>
+                    <textarea id="feedback" name="feedback" rows="3" placeholder="Please share your detailed feedback, suggestions for improvement, or any other comments" required></textarea>
+                </div>
+                <div class="form-group full-width">
+                    <label>Which aspects were most valuable?</label>
+                    <div class="checkbox-group">
+                        <label><input type="checkbox" id="content" name="valuable_content" value="content">Content Quality</label>
+                        <label><input type="checkbox" id="presentation" name="valuable_presentation" value="presentation">Presentation Style</label>
+                        <label><input type="checkbox" id="materials" name="valuable_materials" value="materials">Course Materials</label>
+                        <label><input type="checkbox" id="interaction" name="valuable_interaction" value="interaction">Interaction/Q&A</label>
+                        <label><input type="checkbox" id="networking" name="valuable_networking" value="networking">Networking Opportunities</label>
+                    </div>
+                </div>
             </fieldset>
 
-            <div class="form-group">
+            <div class="submit-group">
                 <input type="submit" value="Submit Feedback">
                 <input type="reset" value="Clear Form">
             </div>
